Add boxes and style

--- a/advanced-search.html
+++ b/advanced-search.html
@@ -2,9 +2,10 @@
 <html lang="en">
     <head>
         <title>Search</title>
+        <link rel="stylesheet" type="text/css" href="search-style.css">
     </head>
     <body>
-        <form action="https://google.com/search">
+        <form action="https://www.google.com/advanced_search">
             <input type="text" name="q">
             <input type="submit" value="Google Search">
         </form>
